// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BodyWithMeta when route is a redirect route 1`] = `
<body
  className="body"
  lang="en"
>
  <div>
    static page
  </div>
</body>
`;

exports[`BodyWithMeta when route is a static route 1`] = `
<body
  className="body"
  lang="en"
>
  <div>
    static page
  </div>
  <script
    dangerouslySetInnerHTML={
      {
        "__html": "script",
      }
    }
    type="text/javascript"
  />
  <script
    defer={true}
    src="/assets/path/main.js"
    type="text/javascript"
  />
  <script
    defer={true}
    src="/assets/path/bootstrap.js"
    type="text/javascript"
  />
</body>
`;
